--- a/dhcp/dnsmasq.conf
+++ b/dhcp/dnsmasq.conf
@@ -1,12 +1,12 @@
 user=root
-# interface=eth0
-# bind-interfaces
 
-dhcp-range=DHCP_RANGE
-dhcp-option=option:router,192.168.0.1
-dhcp-option=option:dns-server,192.168.0.1
+dhcp-range=MY_DHCP_RANGE
+dhcp-option=option:router,MY_GATEWAY_IP
+dhcp-option=option:dns-server,MY_DNS_SERVER_IP
 dhcp-option=option:dns-server,8.8.8.8
-dhcp-boot=grubnetx64.efi.signed
+dhcp-boot=pxelinux.0
+dhcp-match=set:efi-x86_64,option:client-arch,7
+dhcp-boot=tag:efi-x86_64,bootx64.efi
 
 enable-tftp
 tftp-root=/srv/tftp/
