--- a/dhcp/grub.cfg
+++ b/dhcp/grub.cfg
@@ -1,5 +1,5 @@
-menuentry "Install Ubuntu" {
+menuentry "Install Ubuntu 18.04" {
   set gfxpayload=keep
-  linux /ubuntu-installer/amd64/linux gfxpayload=1024x768x32,1024x768,auto --- live-installer/net-image=http://PXE_SERVER_IP/ubuntu/install/filesystem.squashfs quiet
+  linux /ubuntu-installer/amd64/linux gfxpayload=1024x768x32,1024x768,auto --- live-installer/net-image=http://MY_PXE_SERVER_IP/ubuntu/install/filesystem.squashfs quiet
   initrd /ubuntu-installer/amd64/initrd.gz
 }
