--- a/dhcp/preseed.cfg
+++ b/dhcp/preseed.cfg
@@ -28,6 +28,9 @@ d-i partman-lvm/confirm_nooverwrite boolean true
 d-i partman-auto-lvm/guided_size string max
 d-i partman-partitioning/confirm_resize boolean true
 
+d-i partman-basicfilesystems/no_swap boolean false
+d-i partman-swapfile/size string 0
+
 d-i partman-auto-lvm/new_vg_name string vg01
 d-i partman-auto/expert_recipe string \
       custom :: \
@@ -37,17 +40,10 @@ d-i partman-auto/expert_recipe string \
           method{ efi } \
           format{ } \
           . \
-          32768 32768 100% linux-swap \
-          $lvmok{ } \
-          in_vg { vg01 } \
-          lv_name{ lv01 } \
-          method{ swap } \
-          format{ } \
-          . \
           30720 1 1000000000000000 ext4 \
           $lvmok{ } \
           in_vg { vg01 } \
-          lv_name{ lv02 } \
+          lv_name{ lv01 } \
           mountpoint{ / } \
           method{ format } \
           format{ } \
