--- a/dhcp/preseed.cfg
+++ b/dhcp/preseed.cfg
@@ -2,7 +2,7 @@ d-i debian-installer/locale string en_US
 
 d-i console-setup/ask_detect boolean false
 d-i keyboard-configuration/xkb-keymap select us
-nd-i keyboard-configuration/layoutcode string us
+d-i keyboard-configuration/layoutcode string us
 
 d-i mirror/country string JP
 d-i mirror/http/directory string /ubuntu
